[gd_scene load_steps=19 format=2]

[ext_resource path="res://graphics/lab/CheckButton.png" type="Texture" id=3]
[ext_resource path="res://src/rooms/Room_LB_COM-LAB.gd" type="Script" id=4]
[ext_resource path="res://graphics/lab/PCScreen.png" type="Texture" id=5]
[ext_resource path="res://graphics/lab/backArrow.png" type="Texture" id=6]
[ext_resource path="res://font/Uberal-regular.otf" type="DynamicFontData" id=7]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=8]
[ext_resource path="res://graphics/general/Note2.png" type="Texture" id=9]
[ext_resource path="res://graphics/lab/ComLabNote.png" type="Texture" id=10]
[ext_resource path="res://src/Camera2D.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 60
extra_spacing_char = -13
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="RoomCOMP-LAB" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogBox" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.729412, 0.729412, 0.729412, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note2" type="Sprite" parent="CanvasLayer/DialogBox"]
position = Vector2( 542.677, 320 )
scale = Vector2( 0.48824, 0.488241 )
texture = ExtResource( 9 )

[node name="DialogOkButton" type="TouchScreenButton" parent="CanvasLayer/DialogBox"]
position = Vector2( 699.294, 383.8 )
scale = Vector2( 0.100854, 0.135635 )
normal = ExtResource( 8 )

[node name="Content" type="Label" parent="CanvasLayer/DialogBox"]
margin_left = 267.0
margin_top = 200.0
margin_right = 775.0
margin_bottom = 379.0
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Important" type="Label" parent="CanvasLayer/DialogBox"]
visible = false
margin_left = 298.0
margin_top = 133.0
margin_right = 751.0
margin_bottom = 171.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "IMPORTANT NOTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PCScreen" type="Sprite" parent="."]
position = Vector2( 525.214, 307.101 )
scale = Vector2( 0.876711, 0.876711 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]

[node name="TextPart1" type="Label" parent="."]
margin_left = 332.0
margin_top = 104.0
margin_right = 1326.0
margin_bottom = 204.0
rect_rotation = 0.5
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 3 )
text = "Oh no I'm binary!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BinaryCode" type="Label" parent="."]
margin_left = 487.821
margin_top = 156.316
margin_right = 719.821
margin_bottom = 270.316
rect_rotation = 0.5
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0, 0.27451, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "1001"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPart2" type="Label" parent="."]
margin_left = 221.0
margin_top = 218.0
margin_right = 1815.0
margin_bottom = 421.0
rect_rotation = 0.5
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 6 )
text = "I would like to be decimal...
Can you help me?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 416.0
margin_top = 315.0
margin_right = 476.0
margin_bottom = 375.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/read_only = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
align = 1
max_length = 1
placeholder_text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkButton" type="TouchScreenButton" parent="."]
position = Vector2( 500.2, 417.467 )
rotation = 0.00872665
scale = Vector2( 0.104876, 0.104876 )
normal = ExtResource( 3 )

[node name="BackButton" type="TouchScreenButton" parent="."]
position = Vector2( 111.22, 592.973 )
rotation = 3.14159
scale = Vector2( 0.160173, 0.12588 )
normal = ExtResource( 6 )

[node name="ComLabNote" type="TouchScreenButton" parent="."]
modulate = Color( 0.941176, 0.941176, 0.941176, 1 )
position = Vector2( 846.531, 67.0263 )
rotation = -0.191986
scale = Vector2( 0.71528, 0.71528 )
normal = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true
script = ExtResource( 11 )
zoom_factor = 0.15

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="released" from="CanvasLayer/DialogBox/DialogOkButton" to="." method="_on_DialogOkButton_released"]
[connection signal="released" from="OkButton" to="." method="_on_OkButton_released"]
[connection signal="released" from="BackButton" to="." method="_on_BackButton_released"]
[connection signal="released" from="ComLabNote" to="." method="_on_ComLabNote_released"]
